# pyrogram

./: .gitignore  hatch_build.py  pyproject.toml
generator/api/: generator.py
generator/api/source/: auth_key.tl  sys_msgs.tl
generator/api/template/: combinator.txt  type.txt
pyrogram/: __init__.py
pyrogram/methods/bots/: __init__.py
pyrogram/types/bots_and_keyboards/: bot_command.py
pyrogram/types/messages_and_media/: message.py
tgramclient/: __init__.py  scaffold.py  utils.py
tgramclient/crypto/: __init__.py  aes.py
tgramclient/network/: __init__.py  network.py
tgramclient/network/transport/: __init__.py
tgramclient/raw/: all.py
tgramclient/raw/base/: __init__.py  access_point_rule.py  account_days_ttl.py  app_web_view_result.py  attach_menu_bot.py  attach_menu_bot_icon.py  attach_menu_bot_icon_color.py  attach_menu_bots.py  attach_menu_bots_bot.py  attach_menu_peer_type.py  authorization.py  auto_download_settings.py  auto_save_exception.py  auto_save_settings.py  available_reaction.py  bad_msg_notification.py  bank_card_open_url.py  base_theme.py  bind_auth_key_inner.py  boost.py  bot_app.py  bot_command.py  bot_command_scope.py  bot_info.py  bot_inline_message.py  bot_inline_result.py  bot_menu_button.py  cdn_config.py  cdn_public_key.py  channel_admin_log_event.py  channel_admin_log_event_action.py  channel_admin_log_events_filter.py  channel_location.py  channel_messages_filter.py  channel_participant.py  channel_participants_filter.py  chat.py  chat_admin_rights.py  (+267 more)
tgramclient/storage/: __init__.py  sqlite_storage.py  storage.py
(+2051 files in other folders)
